Bug 488420 IME enabled state is not modified when a focused editor's readonly attribute is changed r=smaug